# FP-GPU

./: .gitignore  README.md  pyproject.toml
playground/: test-script.py
src/: pauli_matrices.py
src/fp_gpu/: __init__.py
