[project]
name = "fp-gpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vbeguin", email = "160333309+lycoa@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
