[project]
name = "fp-gpu"
version = "0.1.0"
description = "First Sheet in Simulation on GPUs Labcourse"
readme = "README.md"
authors = [
    { name = "vbeguin", email = "160333309+lycoa@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "pre-commit",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"


[tool.ruff]
# Enumerate all fixed violations.
show-fixes = true

[tool.ruff.lint]
preview = true

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
